Update scrollbar appearance, fix height issue and add scrollbar color (issue #75)

--- a/assets/src/css/site-components/_site-component-slideout.scss
+++ b/assets/src/css/site-components/_site-component-slideout.scss
@@ -29,17 +29,17 @@
     left: 0;
     padding: 0 1rem;
     overflow: auto;
-    min-height: 450px;
+    scrollbar-color: $color--slideout--text transparent;
 }
 
 
 .slideout-content {
-    display: flex;
+/*    display: flex;
     justify-content: center;
     align-items: center;
     flex-wrap: nowrap;
-    max-height: calc(100% - var(--wp--custom--navbar--row-height));
-    padding: 0;
+    //max-height: calc(100% - var(--wp--custom--navbar--row-height));
+    padding: 0;*/
 }
 
 
@@ -60,21 +60,7 @@
     li {
         display: block;
         width: 100%;
-        padding-left: 0;
-
-        // typography
-        letter-spacing: .8px;
-        font-family: var(--wp--preset--font-family--secondary);
-        font-weight: 400;
-        text-align: left;
-        line-height: 110%; //unquote('max(1em, 6vh)');
-        //font-size: clamp(1.75rem, 4vw, 2.5rem);
-        font-size: clamp(2rem, 4vw, 2.5rem);
-    }
-
-    li + li {
-        //margin-top: var(--wp--preset--spacing--40);
-        margin-top: 50px;
+        padding: 1.25rem 0;
     }
 
     a {
@@ -82,13 +68,14 @@
         padding: 0;
 
         // typography
-        font-family: inherit;
-        font-weight: inherit;
-        font-size: inherit;
-        line-height: inherit;
-        letter-spacing: inherit;
+        letter-spacing: .8px;
+        font-family: var(--wp--preset--font-family--primary);
+        font-weight: 200;
+        font-size: clamp(2rem, 4vw, 2.5rem);
+        line-height: 150%;
+        text-align: center;
         text-decoration: none !important;
-        text-shadow: 0 1px 10px rgba(0,0,0,.25);
+        text-shadow: 0 1px 10px rgba(0,0,0,.2);
         color: $color--slideout--text;
         outline: 0 !important;
         transition: all .4s;
@@ -96,7 +83,7 @@
         &:hover,
         &:focus {
             text-decoration: none !important;
-            text-shadow: none !important;
+            text-shadow: 0 1px 20px rgba(255,255,255,.5);
             color: $color--slideout--text__hover;
         }
     }
